Vercel config done

--- a/vercel.json
+++ b/vercel.json
@@ -1,29 +1,15 @@
 {
-    "version": 2,
-    "builds": [
+  "builds": [{
+      "src": "minor_project/wsgi.py",
+      "use": "@vercel/python",
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.12" }
+  }],
+  "routes": [
       {
-        "src": "minor_project/wsgi.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.12" }
-      },
-      {
-        "src": "build_files.sh",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "staticfiles_build"
-        }
+          "src": "/(.*)",
+          "dest": "minor_project/wsgi.py"
       }
-    ],
-    "routes": [
-      {
-        "src": "/static/(.*)",
-        "dest": "/static/$1"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "minor_project/wsgi.py"
-      }
-    ]
-  }
+  ]
+}
   
   
